--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,17 @@
--Add content for resume and contact pages from live site
+Required for "Launch":
 -Write content for Keen page
 -Review/edit content for all existing pages, but especially Consulting page
 -Update personal bio
 -Make layout/appearance minimally acceptable for publication
--Upload to S3
--Improve layout/appearance
+-Add error.html page
+
+Post-launch:
 -Add Google Analytics
--Refactor to avoid duplication of code in pages
--Fix duplication of "blog" in pagination URLs
+-Write blog post about set-up (Misaki, S3, Progressive)
+-Add pictures (Kallisti, Burning Man, About Me, Keen IO)
+-Improve how pagination works
+ -Add most recent post to blog index
+ -Refactor to avoid duplication of code in pages
+ -Fix duplication of "blog" in pagination URLs
+-Improve layout/appearance
+-Use CloudFront (http://docs.aws.amazon.com/gettingstarted/latest/swh/getting-started-create-cfdist.html)
